# termChat

./: App.cpp  App.h  CMakeLists.txt  CMakePresets.json  Constants.h  Controller.cpp  Controller.h  Model.cpp  Model.h  Net-TCS-Impl.cpp  Net.h  README.md  View.h  ViewNcursesImpl.cpp  main.cpp
docs/: todo.txt
